# auveRL

./: README.md  evaluate.py  main.py  pyproject.toml  requirements.txt  train.py
environments/: urban_environment.py
models/: dqn_model.py  ppo_model.py
tests/: run_tests.py  test_dqn_model.py  test_environment.py
utils/: data_processing.py  detect_device.py  visualization.py
