[tool.poetry]
name = "auto-vehicle-rl"
version = "0.1.0"
description = "Mô hình Tối ưu Hóa Đường đi Tự động cho Xe Tự hành bằng Reinforcement Learning"
authors = ["Juhan Nguyen <dungthcsnt2014@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "AVRL"}]

[tool.poetry.dependencies]
python = ">=3.11.4,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
gymnasium = "^0.28.1"  # Phiên bản mới của gym
stable-baselines3 = "^2.1.0"  # Hỗ trợ PyTorch
tqdm = "^4.65.0"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.0"
imageio = "^2.31.1"
ffmpeg-python = "^0.2.0"
av = "^10.0.0"  # Backend PyAV
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"